crates/agentprof-cli/tests/snapshots/mcp_waste__mcp_waste_md_default.snap
---
source: crates/agentprof-cli/tests/mcp_waste.rs
assertion_line: 34
expression: redacted
---
# MCP Waste Report (22 sessions, generated [DATE])

## Summary

- 22 sessions analyzed
- 2 MCP servers in scope
- 1 tools NEVER called across ANY session
- ≈400 wasted tokens (heuristic / sidecar / mixed — see `--export json` for per-session provenance)
- Largest waste: `github` server, ≈400 tokens across 4 sessions

## "Always unused" — 1 tools (top 1)

| Tool | Server | Sessions loaded | Tokens (per session) |
|------|--------|----------------:|---------------------:|
| mcp__github__create_issue | github | 1 | ≈200 |

## Per-server cross-session

| Server | Sessions loaded | Sessions w/0 calls | Calls (sum) | Wasted tokens |
|--------|----------------:|-------------------:|------------:|--------------:|
| github | 4 | 1 | 3 | ≈400 |
| filesystem | 2 | 0 | 2 | ≈0 |
